snapshots/aws_shared_vpc/aws_configs/accounts/028403472736/us-east-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-0dcdb8b34935bfb46",
     "RouteTableId": "rtb-0b1ab092e583c1c3a",
     "SubnetId": "subnet-072b7e0a2a6c2e3a3"
    },
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-048a57a4f53058691",
     "RouteTableId": "rtb-0b1ab092e583c1c3a",
     "SubnetId": "subnet-056ebbbb47985c3c5"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0b1ab092e583c1c3a",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "10.4.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-08222c132440e92d7"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-072e5314d4832dc50",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "shared_services-rtb"
    }
   ],
   "VpcId": "vpc-02008b4ca4a5ced27"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-02f9985af5d7c2b5c",
     "RouteTableId": "rtb-00dd8f5e786ca6c89"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-00dd8f5e786ca6c89",
   "Routes": [
    {
     "DestinationCidrBlock": "10.4.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-093278076fdc443fa"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-0633d76f4bf48085b",
     "RouteTableId": "rtb-06a68c118e3990ef0"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-06a68c118e3990ef0",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-02008b4ca4a5ced27"
  },
  {
   "Associations": [
    {
     "AssociationState": {
      "State": "associated"
     },
     "Main": false,
     "RouteTableAssociationId": "rtbassoc-025f797599c8f3b82",
     "RouteTableId": "rtb-0e4745c3e026c73f1",
     "SubnetId": "subnet-0490d9ba4cc4f1efd"
    }
   ],
   "OwnerId": "028403472736",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-0e4745c3e026c73f1",
   "Routes": [
    {
     "DestinationCidrBlock": "10.1.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-08222c132440e92d7"
    },
    {
     "DestinationCidrBlock": "10.2.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-0ef89617f2c713c11"
    },
    {
     "DestinationCidrBlock": "10.3.0.0/16",
     "Origin": "CreateRoute",
     "State": "active",
     "VpcPeeringConnectionId": "pcx-0cb653aa63fcc5899"
    },
    {
     "DestinationCidrBlock": "10.4.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-00d12410102c0b04b",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [
    {
     "Key": "Name",
     "Value": "jump-rtb-igw"
    }
   ],
   "VpcId": "vpc-093278076fdc443fa"
  }
 ]
}
